Issue #3227427 by mherchel, Gauravmahlawat: Olivero: <summary> focus state is invisible in Windows high contrast

--- a/core/themes/olivero/css/components/details.pcss.css
+++ b/core/themes/olivero/css/components/details.pcss.css
@@ -78,7 +78,8 @@
 
 /* Disable default outline for summary, since we have own implementation */
 .olivero-details__summary:focus {
-  outline: none;
+  outline: solid 2px transparent;
+  outline-offset: -4px;
 }
 
 /* Details summary, hover state */
@@ -129,7 +130,7 @@
 }
 
 .collapse-processed > .olivero-details__summary .details-title:focus {
-  outline: none;
+  outline: solid 2px transparent;
 }
 
 .collapse-processed > .olivero-details__summary .details-title:hover {
